jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef void (*AbreCupomCallback) (PCHAR CPF_CNPJ,PCHAR Nome,PCHAR Endereco);


typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef void (*EfetuaPagamentoCallback) (PCHAR CodFormaPagto,double Valor,PCHAR Observacao,BOOL ImprimeVinculado);


typedef void (*FechaCupomCallback) (PCHAR Observacao,int IndiceBMP);


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;


typedef void (*IntArgumentCallback) (int value);


typedef void (*NoArgumentCallback) (void);


typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;

DllImport int ECF_CancelaImpressaoCheque(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_CalculaValoresVirtuais(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetAcrescimoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetAcrescimoOPNF(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCancelamentoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCancelamentoOPNF(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCCDC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCCF(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCDC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCFC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCNF(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetCNFCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetDataDaImpressora(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetDataDoMovimento(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetDescontoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetDescontoOPNF(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetFPG(const INTPTR ecfHandle, FormaPagamentoRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetFPGCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetGNF(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetICMS(const INTPTR ecfHandle, AliquotaRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetICMSCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetIsentoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetIsentoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetISSQN(const INTPTR ecfHandle, AliquotaRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetISSQNCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetNaoTributadoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetNCN(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetNumeroCOOInicial(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDaLoja(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDeSerie(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDoECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetRG(const INTPTR ecfHandle, RelatorioGerencialRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetRGCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalTroco(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetValorGrandeTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetVendaLiquida(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_MontaDadosReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_ImprimeCheque(const INTPTR ecfHandle, const PCHAR Banco, const double Valor, const PCHAR Favorecido, const PCHAR Cidade, const double Data, const PCHAR Observacao);

DllImport int ECF_LeituraCMC7(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_LeituraMemoriaFiscalArquivoData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalArquivoReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalSerialData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_LeituraMemoriaFiscalSerialReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetOnAguardandoRespostaChange(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnAntesAbreCupom(const INTPTR ecfHandle, const AbreCupomCallback method);

DllImport int ECF_SetOnAntesAbreCupomVinculado(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnAntesAbreNaoFiscal(const INTPTR ecfHandle, const AbreCupomCallback method);

DllImport int ECF_SetOnAntesAbreRelatorioGerencial(const INTPTR ecfHandle, const IntArgumentCallback method);

DllImport int ECF_SetOnAntesCancelaCupom(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnAntesCancelaItemNaoFiscal(const INTPTR ecfHandle, const IntArgumentCallback method);

DllImport int ECF_SetOnAntesCancelaItemVendido(const INTPTR ecfHandle, const IntArgumentCallback method);

DllImport int ECF_SetOnAntesCancelaNaoFiscal(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnAntesEfetuaPagamento(const INTPTR ecfHandle, const EfetuaPagamentoCallback method);

DllImport int ECF_SetOnAntesEfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const EfetuaPagamentoCallback method);

DllImport int ECF_SetOnAntesFechaCupom(const INTPTR ecfHandle, const FechaCupomCallback method);

DllImport int ECF_SetOnAntesFechaNaoFiscal(const INTPTR ecfHandle, const FechaCupomCallback method);

DllImport int ECF_SetOnAntesFechaRelatorio(const INTPTR ecfHandle, const NoArgumentCallback method);

DllImport int ECF_SetOnPoucoPapel(const INTPTR ecfHandle, const NoArgumentCallback method);